# Ubuntu_passportScanner

./: PassportReaderJNI.cpp  README.md  toolchain_ubuntu.cmake
Demo_passportReader/: compile.sh  getData.h  test.cpp  test_static.cpp
Demo_passportScanner/: compile.sh  test  test.cpp  test_open  test_open.cpp  护照扫描模块接口说明(Ubuntu C++版)V1.0.5.docx
Demo_passportScanner/user/USB_TEMP/: mrz.txt
PassportReader/: .clang_complete  .gitignore  CMakeLists.txt
PassportReader/PassportReaderAPI/: CMakeLists.txt
PassportReader/PassportReaderAPI/include/: build_defs.h  getData.h  internalLogging.h  mrzUtils.h  wltdecode.h
PassportReader/PassportReaderAPI/src/: getData.cpp  imageUtils.cpp  mrzUtils.cpp
PassportReader/PassportReaderDEMO/: CMakeLists.txt  USAGE.himix.md  USAGE.jetson.md
PassportReader/PassportReaderDEMO/capi/: PassportReaderCAPI.cpp  PassportReaderCAPI.h  capi-demo.c
PassportReader/PassportReaderDEMO/include/: internalLogging.h
PassportReader/PassportReaderDEMO/src/: main.cpp
PassportReader/PassportScanner/: CMakeLists.txt
PassportReader/PassportScanner/include/: WltRS.h  globalMacro.h  utils.h
PassportReader/PassportScanner/include/json/: assertions.h  json.h  reader.h
PassportReader/PassportScanner/src/: WltRS.cpp  passportScanner.cpp  utils.cpp
PassportReader/PassportScanner/src/json/: json_reader.cpp  json_value.cpp
PassportReader/libCISHigh/: CMakeLists.txt
PassportReader/libCISHigh/include/: CISReader.h  UsbHandler.h  datastruct.h  ezusbAPI.h
PassportReader/libCISHigh/src/: CISReader.cpp  UsbHandler.cpp  ezusbAPI.cpp
PassportReader/libCamera/: CMakeLists.txt
PassportReader/libCamera/include/: ImageProcess.h  libCamera.h
PassportReader/libCamera/include.MVSDK.win/: CameraApi.h  CameraApiLoad.h  CameraDefine.h  CameraGrabber.h
PassportReader/libCamera/src/: ImageProcess.cpp  libCamera.cpp
PassportReader/libCheck/: CMakeLists.txt
PassportReader/libCheck/include/: CHN.h  ContentCheck.h  Country.h  FileProcess.h  ImageCode.h  PatternData.h  ResultWeight.h  UVCheck.h  pyContentCheck.h
PassportReader/libCheck/src/: ARG.cpp  AUS.cpp  BEL.cpp  BLZ.cpp  CAN.cpp  CHN_E.cpp  ContentCheck.cpp  FileProcess.cpp  GRC.cpp  HND.cpp  IDN.cpp  IRL.cpp  ImageCode.cpp  ImageLoca.cpp  ImageRotate.cpp  InfoSep.cpp  LIE.cpp  LSO.cpp  MAR.cpp  MDA.cpp  MUS.cpp  ModeData.cpp  NIRMRZ.cpp  NPL.cpp  PAN.cpp  ParityCheck.cpp  PassportInfo.cpp  Pattern-Fiber.cpp  PatternData.cpp  PatternMatch.cpp  ResultWeight.cpp  SAU.cpp  TopFunction.cpp  USA.cpp  UVCheck.cpp  UVMRZ.cpp  pyContentCheck.cpp
PassportReader/libChip/: CMakeLists.txt
PassportReader/libChip/include/: CryptoDES.h  EFFile.h  JP2.h  Ptypes.h  RFReader.h  STEFFile.h  echip.h  libChip.h  passport.h
PassportReader/libChip/include/utf8/: checked.h
PassportReader/libChip/src/: CryptoDES.cpp  EFFile.cpp  JP2.cpp  MRTD.cpp  Ptypes.cpp  RFReader.cpp  STEFFile.cpp  echip.cpp  passport.cpp
PassportReader/libImageProcess/: CMakeLists.txt
PassportReader/libImageProcess/include/: CropCard.h  ImageProcess.h
PassportReader/libImageProcess/src/: CropCard.cpp  ImageProcess.cpp
PassportReader/libLED/: CMakeLists.txt
PassportReader/libLED/include/: USBLED.h  USB_HAL.h  rsaAPI.h  types.h
PassportReader/libLED/src/: USBLED.cpp  USB_HAL.cpp  rsaAPI.cpp
PassportReader/libOCR.old/: CMakeLists.txt
PassportReader/libOCR.old/include/: config.h  featureIO.h  findMrz.h  mrz.h  mrzAPI.h  mrzChar.h  rotate.h  utils.h
PassportReader/libOCR.old/src/: featureIO.cpp  findMrz.cpp  libOCR.cpp  mrz.cpp  mrzAPI.cpp  mrzChar.cpp  rotate.cpp  table.cpp  utils.cpp
PassportReader/libOCR/include/: findMrz.h  mrzAPI.h  utils.h
PassportReader/libOCR/src/: findMrz.cpp  mrz.cpp  utils.cpp
PassportReader/libOCRNew/: CMakeLists.txt
PassportReader/libOCRNew/include/: findMrz.h  mrz.h  rotate.h  utils.h
PassportReader/libOCRNew/src/: findMrz.cpp  mrz.cpp  rotate.cpp  utils.cpp
PassportScanner/: CMakeLists.txt
PassportScanner/include/: internalLogging.h  passportScanner.h  utils.h
PassportScanner/src/: passportScanner.cpp
glog-master/: Makefile  Makefile.in  config.status  configure  demangle_unittest  glog.sh  libglog.la  libglog.pc  libtool  logging_striptest0  logging_striptest10  logging_striptest2  logging_unittest  signalhandler_unittest  stacktrace_unittest  stl_logging_unittest  symbolize_pie_unittest  symbolize_unittest  utilities_unittest
glog-master/.libs/: demangle_unittest  libglog.lai  libglog.so.0.0.0  logging_striptest0  logging_striptest10  logging_striptest2  logging_unittest  signalhandler_unittest  stacktrace_unittest  stl_logging_unittest  symbolize_pie_unittest  symbolize_unittest  utilities_unittest
glog-master/cmake/: CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  glog-modules.cmake  glog-targets.cmake
install/include/: getData.h  passportScanner.h
install/lib/: libcrypto.so.1.1  libglog.la  libusb-1.0.la  libusb-1.0.so.0.2.0
libusb-1.0.23/: Makefile  config.status  libtool  libusb-1.0.pc  libusb.sh
libusb-1.0.23/doc/: Makefile
libusb-1.0.23/examples/: Makefile
libusb-1.0.23/libusb/: Makefile  libusb-1.0.la
libusb-1.0.23/tests/: Makefile
openssl-1.1.0k/: Makefile  configdata.pm  libcrypto.pc  libssl.pc  libssl.so.1.1  openssl.pc  openssl.sh  pod2htmd.tmp
openssl-1.1.0k/apps/: openssl
openssl-1.1.0k/crypto/: buildinf.h
openssl-1.1.0k/fuzz/: asn1-test  asn1parse-test  bignum-test  bndiv-test  cms-test  conf-test  crl-test  ct-test  server-test  x509-test
openssl-1.1.0k/test/: aborttest  afalgtest  asynciotest  asynctest  bad_dtls_test  bftest  bio_enc_test  bioprinttest  bntest  buildtest_sha  casttest  cipherlist_test  clienthellotest  constant_time_test  crltest  ct_test  d2i_test  danetest  destest  dhtest  dsatest  dtlstest  dtlsv1listentest  ec_internal_test  ecdsatest  ectest  enginetest  errtest  evp_extra_test  evp_test  exdatatest  exptest  fatalerrtest  gmdifftest  heartbeat_test  hmactest  ideatest  igetest  md2test  md4test  (+33 more)
openssl-1.1.0k/tools/: c_rehash
(+483 files in other folders)
